reformatting code